Fixed bug with line breaks inside list items

--- a/app/assets/stylesheets/atoms/_typography.sass
+++ b/app/assets/stylesheets/atoms/_typography.sass
@@ -22,6 +22,3 @@ a
 
   &:hover
     text-decoration: underline
-
-li
-  list-style-position: inside
